deploy/k8s/dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kaamnow-dev
  labels:
    env: dev
    app: kaamnow
